Kubernetes/Shlink/yamls/shlink-web-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-web-client
  namespace: shlink
spec:
  selector:
    matchLabels:
      app: shlink-web-client
  template:
    metadata:
      labels:
        app: shlink-web-client
    spec:
      containers:
      - name: shlink-web-client
        image: shlinkio/shlink-web-client:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
  namespace: shlink
spec:
  selector:
    app: shlink-web-client
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-shlink-web-client-https-redirect
  namespace: shlink
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-shlink-web-client-security
  namespace: shlink
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-shlink-web-client-websecure
  namespace: shlink
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`shlink-web-client.domain.com`)
      services:
        - name: shlink-web-client
          port: 8080
          serversTransport: traefik-shlink-web-client-transport
      middlewares:
        - name: traefik-shlink-web-client-security
  tls:
    secretName: shlink-web-client-domain-com
    options:
      name: traefik-shlink-web-client-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-shlink-web-client-web
  namespace: shlink
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`shlink-web-client.domain.com`)
      services:
        - name: shlink-web-client
          port: 8080
      middlewares:
        - name: traefik-shlink-web-client-https-redirect
