Kubernetes/Shlink/yamls/shlink.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shlink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink
  namespace: shlink
  labels:
    app: shlink
    app.kubernetes.io/name: shlink
spec:
  selector:
    matchLabels:
      app: shlink
  template:
    metadata:
      labels:
        app: shlink        
        app.kubernetes.io/name: shlink
    spec:
      containers:
      - name: shlink
        image: shlinkio/shlink:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shlink
  namespace: shlink
spec:
  selector:
    app: shlink
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-shlink-security
  namespace: shlink
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-shlink-websecure
  namespace: shlink
  annotations:
    gethomepage.dev/href: "https://shlink.domain.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Shlink"
    gethomepage.dev/group: Office
    gethomepage.dev/icon: shlink.svg
    gethomepage.dev/app: shlink # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Shlink"
    #gethomepage.dev/showStats: "true"
    #gethomepage.dev/widget.type: "emby"
    #gethomepage.dev/widget.url: "https://emby.example.com"
    #gethomepage.dev/pod-selector: ""
    #gethomepage.dev/weight: 10 # optional
    #gethomepage.dev/instance: "public" # optional
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`shlink.domain.com`)
      services:
        - name: shlink
          port: 8080
          serversTransport: traefik-shlink-transport
      middlewares:
        - name: traefik-shlink-security
  tls:
    secretName: shlink-domain-com
    options:
      name: traefik-shlink-tlsoptions
